--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
                 <div class="form-border"></div>
 
             <a href="#"><legend id="forgot-pass">Forgot password?</legend></a>
-            <input id="submit-btn" type="submit" name="submit" value="LOGIN"><a href="#" id="signup">Don't have account yet?</a>
+            <input id="submit-btn" type="submit" name="submit" value="LOGIN"><a href="member.html" id="signup">Don't have account yet?</a>
         </form>
     </div>
     
